  all subobjects are also selected.  Publication types may also be selected.
  All publishing actions will now be applied to all items contained in the
  selected containers, and recursively all items within publications.

- A New "Kupu Popup" formulator field.  This field is for html content
  and pops up a "popup kupu" to provide easy wysiwyg editing.

- External Source Tool: the select external source drop-down
  now has "Select Item" as the first option, rather than the
  ES at the top of the list.  This cleans up the interface a bit.

- 101103: allowed addables functionality is now moved to Silva
  Folders.  Any IContainer extending Products.Silva.Folder can
  now have addables settings.  NOTE: the allowed_addables API
  has also changed

Bugs Fixed
~~~~~~~~~~

- Fixed Internet Explorer 7 kupu issue triggered when clicking the 
  unordered list button. 

- External Source Tool: the title now reverts back to "external
  source" when the tool is reset

- External Source Tool: removing an external source (via the
  remove button) now resets the tool

- Added condition in Container/tab_edit for objects that are both
  containers and content to show only one author name.

Ported from Silva 2.1
~~~~~~~~~~~~~~~~~~~~~

- Fixed some formatting issues with buttons in the tab editor for
  containers.

- Fixed 310589: Silva AutoTOC ignores "types to list" setting 
  when using silva sort order.


- Add a function sendmail which can send mail using Mailhost and
  Maildrophost in Zope 2.11 (otherwise Maildrophost is broken in Zope
  2.11).

- Display icons of members in tab_access, the user lookup screen, and
  group edition.

Silva 2.2a1 (2008-11-18)
------------------------

Features added
~~~~~~~~~~~~~~

- 261569: the new toc features made available in 2.1 are now
  accessible within documents by using the TOC code source (id:
  cs_toc).  This is part of service_codesources, and is copied into
  the Silva Root when SilvaExternalSources is installed.
